tests/paczka1/fuzzy1/70923066.err
Error in line 2: DIyNjQi A960 28,9
Error in line 4: DIyNjQi S216 69,0
Error in line 10: H9pogiHRiT A30 46,9
Error in line 7: S216 A30 12,7
Error in line 6: VOzdZeWOZ6 A960 75,0
Error in line 21: VOzdZeWOZ6 A451 71,0
Error in line 25: H9pogiHRiT A451 22,7
